...
                                    setState(() {
                                      schedulerData.vaccine =
                                          vaccineData.vaccine;
                                    });
                                  },
                                  items: <String>[
                                    'Astrazeneca',
                                    'Janssen',
                                    'Moderna',
                                    'Pfizer',
                                    'Sinovac'
                                  ].map<DropdownMenuItem<String>>(
                                      (String value) {
                                    return DropdownMenuItem<String>(
                                      value: value,
                                      child: Text(value,
                                          style: TextStyle(
...
