...
                                    obscureText: true,
                                    decoration: InputDecoration(
                                      hintText: 'Confirm Password',
                                    ),
                                    validator: (value) {
                                      if (value != passwordController.text) {
                                        return 'Wrong password';
                                      } else {
                                        return null;
                                      }
                                    },
                                  ),
                                  SizedBox(
...
